# admin-api-golang/docs/swagger.yaml
@@ -1,4 +1,19 @@
 definitions:
+  entity.AddSysRoleDto:
+    properties:
+      description:
+        description: 描述
+        type: string
+      roleKey:
+        description: 角色key
+        type: string
+      roleName:
+        description: 角色名称
+        type: string
+      status:
+        description: 状态：1->启用,2->禁用
+        type: integer
+    type: object
   entity.DelSysPostDto:
     properties:
       ids:
@@ -28,6 +43,20 @@ definitions:
     - image
     - password
     - username
+    type: object
+  entity.RoleMenu:
+    properties:
+      id:
+        description: ID
+        type: integer
+      menuIds:
+        description: 菜单id列表
+        items:
+          type: integer
+        type: array
+    required:
+    - id
+    - menuIds
     type: object
   entity.SysDept:
     properties:
@@ -62,6 +91,51 @@ definitions:
         description: ID
         type: integer
     type: object
+  entity.SysMenu:
+    properties:
+      children:
+        description: 子集
+        items:
+          $ref: '#/definitions/entity.SysMenu'
+        type: array
+      createTime:
+        allOf:
+        - $ref: '#/definitions/util.HTime'
+        description: 创建时间
+      icon:
+        description: 菜单图标
+        type: string
+      id:
+        description: ID
+        type: integer
+      menuName:
+        description: 菜单名称
+        type: string
+      menuStatus:
+        description: 启用状态；1->禁用；2->启用
+        type: integer
+      menuType:
+        description: 菜单类型：1->目录；2->菜单；3->按钮
+        type: integer
+      parentId:
+        description: 父菜单id
+        type: integer
+      sort:
+        description: 排序
+        type: integer
+      url:
+        description: 菜单url
+        type: string
+      value:
+        description: 权限值
+        type: string
+    type: object
+  entity.SysMenuIdDto:
+    properties:
+      id:
+        description: ID
+        type: integer
+    type: object
   entity.SysPost:
     properties:
       createTime:
@@ -90,6 +164,12 @@ definitions:
         description: ID
         type: integer
     type: object
+  entity.SysRoleIdDto:
+    properties:
+      id:
+        description: ID
+        type: integer
+    type: object
   entity.UpdateSysPostStatusDto:
     properties:
       id:
@@ -97,6 +177,33 @@ definitions:
         type: integer
       postStatus:
         description: 状态（1->正常 2->停用）
+        type: integer
+    type: object
+  entity.UpdateSysRoleDto:
+    properties:
+      description:
+        description: 描述
+        type: string
+      id:
+        description: Id
+        type: integer
+      roleKey:
+        description: 角色key
+        type: string
+      roleName:
+        description: 角色名称
+        type: string
+      status:
+        description: 状态：1->启用,2->禁用
+        type: integer
+    type: object
+  entity.UpdateSysRoleStatusDto:
+    properties:
+      id:
+        description: ID
+        type: integer
+      status:
+        description: 状态：1->启用,2->禁用
         type: integer
     type: object
   result.Result:
@@ -252,6 +359,108 @@ paths:
           schema:
             $ref: '#/definitions/result.Result'
       summary: 用户登录接口
+  /api/menu/add:
+    post:
+      description: 新增菜单接口
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.SysMenu'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 新增菜单接口
+  /api/menu/delete:
+    delete:
+      description: 根据id删除菜单接口
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.SysMenuIdDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 根据id删除菜单接口
+  /api/menu/info:
+    get:
+      description: 根据id查询菜单
+      parameters:
+      - description: id
+        in: query
+        name: Id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 根据id查询菜单
+  /api/menu/list:
+    get:
+      description: 查询菜单列表
+      parameters:
+      - description: 菜单名称
+        in: query
+        name: menuName
+        type: string
+      - description: 菜单状态
+        in: query
+        name: menuStatus
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 查询菜单列表
+  /api/menu/update:
+    put:
+      description: 修改菜单接口
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.SysMenu'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 修改菜单接口
+  /api/menu/vo/list:
+    get:
+      description: 查询新增选项列表接口
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 查询新增选项列表接口
   /api/post/add:
     post:
       description: 新增岗位接口
@@ -406,6 +615,177 @@ paths:
           schema:
             $ref: '#/definitions/result.Result'
       summary: 岗位下拉列表
+  /api/role/add:
+    post:
+      description: 新增角色接口
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.AddSysRoleDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 新增角色接口
+  /api/role/assignPermissions:
+    put:
+      description: 分配权限接口
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.RoleMenu'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 分配权限接口
+  /api/role/delete:
+    delete:
+      description: 根据id删除角色接口
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.SysRoleIdDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 根据id删除角色接口
+  /api/role/info:
+    get:
+      description: 根据id查询角色接口
+      parameters:
+      - description: Id
+        in: query
+        name: Id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 根据id查询角色接口
+  /api/role/list:
+    get:
+      description: 分页查询角色列表接口
+      parameters:
+      - description: 分页数
+        in: query
+        name: pageNum
+        type: integer
+      - description: 每页数
+        in: query
+        name: pageSize
+        type: integer
+      - description: 角色名称
+        in: query
+        name: roleName
+        type: string
+      - description: 帐号启用状态：1->启用,2->禁用
+        in: query
+        name: status
+        type: string
+      - description: 开始时间
+        in: query
+        name: beginTime
+        type: string
+      - description: 结束时间
+        in: query
+        name: endTime
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 分页查询角色列表接口
+  /api/role/update:
+    put:
+      description: 修改角色
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.UpdateSysRoleDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 修改角色
+  /api/role/updateStatus:
+    put:
+      description: 角色状态启用/停用接口
+      parameters:
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entity.UpdateSysRoleStatusDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 角色状态启用/停用接口
+  /api/role/vo/idList:
+    get:
+      description: 根据角色id查询菜单数据接口
+      parameters:
+      - description: Id
+        in: query
+        name: Id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 根据角色id查询菜单数据接口
+  /api/role/vo/list:
+    get:
+      description: 角色下拉列表
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/result.Result'
+      summary: 角色下拉列表
 securityDefinitions:
   ApiKeyAuth:
     in: header
