# admin-api-golang/router/router.go
@@ -52,4 +52,13 @@ func register(router *gin.Engine) {
 	router.PUT("/api/menu/update", controller.UpdateSysMenu)
 	router.DELETE("/api/menu/delete", controller.DeleteSysRoleMenu)
 	router.GET("/api/menu/list", controller.GetSysMenuList)
+	router.POST("/api/role/add", controller.CreateSysRole)
+	router.PUT("/api/role/info", controller.GetSysRoleById)
+	router.PUT("/api/role/update", controller.UpdateSysRole)
+	router.DELETE("/api/role/delete", controller.DeleteSysRoleById)
+	router.PUT("/api/role/updateStatus", controller.UpdateSysRoleStatus)
+	router.GET("/api/role/list", controller.GetSysRoleList)
+	router.GET("/api/role/vo/list", controller.QuerySysRoleVoList)
+	router.GET("/api/role/vo/idList", controller.QueryRoleMenuIdList)
+	router.PUT("/api/role/assignPermissions", controller.AssignPermissions)
 }
